drkns 19.09.2020 18:43:36 +0100 - build 5670

1. Рефакторинг.

drkns 17.09.2020 00:15:38 +0100 - build 5669

1. Продолжение 5667.

drkns 14.09.2020 17:39:39 +0100 - build 5668

1. 0003819: Editor: crash when typing in alternate layout.

drkns 14.09.2020 00:58:21 +0100 - build 5667

1. Криво работало переключение экзотических кодовых страниц из-за неправильно устанавливаемых флагов.

2. Добавлена ручная roundtrip-проверка для тех страниц, которые не умеет валидировать ОС.

3. Рефакторинг.

4. Тесты.

zg 14.09.2020 01:03:19 +0300 - build 5666

1. подавление перерисовки под диалогом с исключениями.

drkns 12.09.2020 02:02:02 +0100 - build 5665

1. В некоторых случаях неправильно работал regex-поиск слов.

drkns 10.09.2020 00:11:09 +0100 - build 5664

1. Уточнения обработки исключений.

2. Отображение системных ошибок в исключениях SQLite.

3. Прочие мелочи.

drkns 06.09.2020 23:00:00 +0100 - build 5663

1. Бинарные данные в экспортируемой конфигурации теперь хранятся как base64.

2. Чтение UTF-7 не работало. Совсем.

3. Рефакторинг.

4. Тесты.

drkns 01.09.2020 17:48:03 +0100 - build 5662

1. В некоторых случаях не работала установка описаний ключей бд.

drkns 31.08.2020 23:01:01 +0100 - build 5661

1. Продолжение #3817.

2. VS2017.

drkns 31.08.2020 19:18:12 +0100 - build 5660

1. Версия в интерфейсе выводится как major.minor.build.revision, для совместимости с OS и на будущее.

2. Возвращен параметр /x - отключить обработку исключений (для удобства разработки и отладки).

3. Рефакторинг.

zg 28.08.2020 03:38:58 +0300 - build 5659

1. с форума: никогда не показывать заголовки в листбоксе с флагом DIF_LISTNOBOX.

drkns 27.08.2020 00:35:51 +0100 - build 5658

1. 0003817: F6 - Failed move file when volume is mounted to folder only

2. Пара мелочей.

drkns 22.08.2020 22:49:52 +0100 - build 5657

1. Снова о сортировке: направление для дополнительных критериев может наследовать основное.

2. Рефакторинг.

drkns 20.08.2020 18:00:35 +0100 - build 5656

1. Уточнение 5655.
