@@ -1,3 +1,7 @@
+drkns 22.09.2020 08:45:08 +0100 - build 5671
+
+1. Copying from viewer didn't work properly.
+
 drkns 19.09.2020 18:43:36 +0100 - build 5670
 
 1. Refactoring.
